--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,20 +29,21 @@ jobs:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
 
-    - name: Authorize Docker push
-      run: gcloud auth configure-docker
+    - name: Configure Docker
+      run: |
+        gcloud auth configure-docker asia-south1-docker.pkg.dev
 
     - name: Build and Push Container
       run: |
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }} .
-        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+        docker build -t asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/email-bot/email-bot:${{ github.sha }} .
+        docker push asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/email-bot/email-bot:${{ github.sha }}
 
     - name: Deploy to Cloud Run
       uses: google-github-actions/deploy-cloudrun@v2
       with:
         service: ${{ env.SERVICE_NAME }}
         region: ${{ env.REGION }}
-        image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+        image: asia-south1-docker.pkg.dev/${{ env.PROJECT_ID }}/email-bot/email-bot:${{ github.sha }}
         flags: '--allow-unauthenticated'
         env_vars: |
           EMAIL_ADDRESS=${{ secrets.EMAIL_ADDRESS }}
